first commit on test

--- a/index.html
+++ b/index.html
@@ -10,23 +10,14 @@
     <p>Hello world</p>
     <h1>This is my first repository</h1>
     <br>
-    <p>The name of repository is test-git</p>
-
-    <h1>This is test environment</h1>
 
 
+    <h1>Another task</h1>
 
-
-
-
-
-
-
-
-
-
+    <h2>This is test environment</h2>
     <p>Good reading</p>
     <br> 
     <p>I hope you enjoted it</p>
+
 </body>
 </html>
